style: add alt style close form's

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="popup">
         <form class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <img src="./images/close-icon.svg" class="popup__close">
+          <img src="./images/close-icon.svg" class="popup__close" alt="Закрытие формы">
           <label class="popup__label">
             <input class="popup__input" type="text" name="name" value="Жак-Ив Кусто">
           </label>
