--- a/index.html
+++ b/index.html
@@ -20,65 +20,34 @@
         <div class="profile__info">
           <div class="profile__title-container">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-batton" type="button"></button>
+            <button class="profile__edit-batton" type="button" data-modal="profile"></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-batton" type="button"></button>
+        <button class="profile__add-batton" type="button" data-modal="image"></button>
       </section>
       <section class="elements">
-        <ul class="elements__container">
-          <li class="element">
-            <img class="element__image" src="./images/place-barcelona.jpg" alt="Церковь в Барселоне">
-            <div class="element__panel">
-              <h2 class="element__name">Барселона</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="./images/place-greece.jpg" alt="Руины греческого древнего храма">
-            <div class="element__panel">
-              <h2 class="element__name">Греция</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="./images/place-island-of-orleans.jpg" alt="Заснеженная тундра">
-            <div class="element__panel">
-              <h2 class="element__name">Остров Орлеан</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="./images/place-lake-bled.jpg" alt="Озеро на фоне замка на островке">
-            <div class="element__panel">
-              <h2 class="element__name">Бледское озеро</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="./images/place-vernazza.jpg" alt="Городок на скалистом утесе у моря">
-            <div class="element__panel">
-              <h2 class="element__name">Вернацца</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="./images/place-yellowstone-national-park.jpg" alt="Горячий источник">
-            <div class="element__panel">
-              <h2 class="element__name">Йеллоустонский национальный парк</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="elements__container"></ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
   </div>
-  <section class="popup">
-    <form class="popup__container" name="form-popup">
+
+  <template id="element-template">
+    <li class="element">
+      <img class="element__image">
+      <button class="element__delete" type="button"></button>
+      <button class="element__edit" type="button" data-modal="image"></button>
+      <div class="element__panel">
+        <h2 class="element__name"></h2>
+        <button class="element__like" type="button"></button>
+      </div>
+    </li>
+  </template>
+  <aside class="popup" id="profile">
+    <form class="popup__container" id="profile" name="form-popup">
       <h3 class="popup__title">Редактировать профиль</h3>
       <button class="popup__close" type="button"></button>
       <label class="popup__label">
@@ -89,7 +58,20 @@
       </label>
       <button class="popup__btn" type="submit">Сохранить</button>
     </form>
-  </section>
+  </aside>
+  <aside class="popup popup_add" id="image">
+    <form class="popup__container popup__container_add" id="image" name="form-popup">
+      <h3 class="popup__title">Новое место</h3>
+      <button class="popup__close popup__close_add" type="button"></button>
+      <label class="popup__label">
+        <input class="popup__input" type="text" name="name-img" placeholder="Название">
+      </label>
+      <label class="popup__label">
+        <input class="popup__input" type="text" name="link" placeholder="Ссылка на картинку">
+      </label>
+      <button class="popup__btn popup__btn_add" type="submit">Сохранить</button>
+    </form>
+  </aside>
 </body>
 
 </html>
