fix: fixed popup opening when editing a card

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
     </li>
   </template>
+
   <aside class="popup" id="profile">
     <form class="popup__container" id="profile" name="form-popup">
       <h3 class="popup__title">Редактировать профиль</h3>
@@ -59,6 +60,7 @@
       <button class="popup__btn" type="submit">Сохранить</button>
     </form>
   </aside>
+
   <aside class="popup popup_add" id="image">
     <form class="popup__container popup__container_add" id="image" name="form-popup">
       <h3 class="popup__title">Новое место</h3>
@@ -69,9 +71,16 @@
       <label class="popup__label">
         <input class="popup__input" type="text" name="link" placeholder="Ссылка на картинку">
       </label>
-      <button class="popup__btn popup__btn_add" type="submit">Сохранить</button>
+      <button class="popup__btn" type="submit">Сохранить</button>
     </form>
   </aside>
+
+  <aside class="popup-look-img">
+    <div class="popup-look-img__container">
+      <button class="popup-look-img__close" type="button"></button>
+    </div>
+  </aside>
+
 </body>
 
 </html>
