refactor: shorten js code after second revue

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </aside>
 
   <aside class="popup popup-look-img">
-    <div class="popup-look-img__container">
+    <div class="popup__container popup-look-img__container">
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
       <img class="popup-look-img__image" src="#" alt="">
       <h3 class="popup-look-img__title"></h3>
