--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <script defer src="./scripts/cards.js"></script>
+  <script defer src="./scripts/selectors-validate.js"></script>
   <script defer src="./scripts/validate.js"></script>
   <script defer src="./scripts/index.js"></script>
   <link rel="stylesheet" href="./pages/index.css">
@@ -52,31 +53,37 @@
   </template>
 
   <aside class="popup" id="popup-edit">
-    <form class="popup__container" name="form-popup">
+    <form class="popup__container" name="form-popup" novalidate>
       <h3 class="popup__title">Редактировать профиль</h3>
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" required>
+        <input class="popup__input" type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" required
+          minlength="2" maxlength="40">
+        <span class="name-error popup__input-error"></span>
       </label>
       <label class="popup__label">
         <input class="popup__input" type="text" name="about-me" placeholder="О себе" value="Исследователь океана"
-          required>
+          required minlength="2" maxlength="200">
+        <span class="about-me-error popup__input-error"></span>
       </label>
-      <button class="popup__btn" type="submit">Сохранить</button>
+      <button class="popup__btn popup__submit" type="submit">Сохранить</button>
     </form>
   </aside>
 
   <aside class="popup" id="popup-add">
-    <form class="popup__container" name="form-popup">
+    <form class="popup__container" name="form-popup" novalidate>
       <h3 class="popup__title">Новое место</h3>
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="name-img" placeholder="Название" required>
+        <input class="popup__input" type="text" name="name-img" placeholder="Название" required minlength="2"
+          maxlength="30">
+        <span class="name-img-error popup__input-error"></span>
       </label>
       <label class="popup__label">
         <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
+        <span class="link-error popup__input-error"></span>
       </label>
-      <button class="popup__btn" type="submit">Сохранить</button>
+      <button class="popup__btn popup__submit" type="submit">Сохранить</button>
     </form>
   </aside>
 
