--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
     </form>
   </aside>
 
+  <aside class="popup" id="popup-add-edit">
+    <form class="popup__container" name="form-popup" novalidate>
+      <h3 class="popup__title">Новое место</h3>
+      <button class="popup__close" aria-label="Закрыть" type="button"></button>
+      <label class="popup__label">
+        <input class="popup__input" type="text" name="name-img" placeholder="Название" required minlength="2"
+          maxlength="30">
+        <span class="name-img-error popup__input-error"></span>
+      </label>
+      <label class="popup__label">
+        <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
+        <span class="link-error popup__input-error"></span>
+      </label>
+      <button class="popup__btn popup__submit" type="submit">Сохранить</button>
+    </form>
+  </aside>
+
   <aside class="popup popup-look-img">
     <div class="popup__container popup-look-img__container">
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
