--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" required
-          minlength="2" maxlength="40">
+        <input class="popup__input" type="text" name="name" placeholder="Имя" value="" required minlength="2"
+          maxlength="40">
         <span class="name-error popup__input-error"></span>
       </label>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="about-me" placeholder="О себе" value="Исследователь океана"
-          required minlength="2" maxlength="200">
+        <input class="popup__input" type="text" name="about-me" placeholder="О себе" value="" required minlength="2"
+          maxlength="200">
         <span class="about-me-error popup__input-error"></span>
       </label>
       <button class="popup__btn popup__submit" type="submit">Сохранить</button>
