--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <!-- <script type="module" src="./scripts/pages/index.js"></script> -->
-  <!-- <link rel="stylesheet" href="./pages/index.css"> -->
+  <!-- <script type="module" src="./pages/index.js"></script>
+  <link rel="stylesheet" href="./pages/index.css"> -->
 </head>
 
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="<%=require('../images/logo.svg')%>" alt="Лого Mesto">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Лого Mesto">
     </header>
     <main class="page__content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('../images/avatar.jpg')%>" alt="Фотография исследователь">
+        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография исследователь">
         <div class="profile__info">
           <div class="profile__title-container">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -58,22 +58,22 @@
         <span class="name-error popup__input-error"></span>
       </label>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="about-me" placeholder="О себе" value="" required minlength="2"
+        <input class="popup__input" type="text" name="job" placeholder="О себе" value="" required minlength="2"
           maxlength="200">
-        <span class="about-me-error popup__input-error"></span>
+        <span class="job-error popup__input-error"></span>
       </label>
       <button class="popup__btn popup__submit" type="submit">Сохранить</button>
     </form>
   </aside>
 
   <aside class="popup" id="popup-add">
-    <form class="popup__container" name="form-popup" novalidate>
+    <form class="popup__container popup__container_type_add" name="form-popup" novalidate>
       <h3 class="popup__title">Новое место</h3>
       <button class="popup__close" aria-label="Закрыть" type="button"></button>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="name-img" placeholder="Название" required minlength="2"
+        <input class="popup__input" type="text" name="name" placeholder="Название" required minlength="2"
           maxlength="30">
-        <span class="name-img-error popup__input-error"></span>
+        <span class="name-error popup__input-error"></span>
       </label>
       <label class="popup__label">
         <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
