--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <!-- <script type="module" src="./pages/index.js"></script>
-  <link rel="stylesheet" href="./pages/index.css"> -->
+  <script type="module" src="./pages/index.js"></script>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -19,10 +19,10 @@
         <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография исследователь">
         <div class="profile__info">
           <div class="profile__title-container">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-batton" aria-label="Открыть редактирование профиля" type="button"></button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-batton" aria-label="Открыть добавление изображений" type="button"></button>
       </section>
@@ -43,7 +43,10 @@
       <button class="element__delete" aria-label="Закрыть" type="button"></button>
       <div class="element__panel">
         <h2 class="element__name"></h2>
-        <button class="element__like" aria-label="Поставить лайк" type="button"></button>
+        <div class="element__like-container">
+          <button class="element__like" aria-label="Поставить лайк" type="button"></button>
+          <span class="element__number-likes"></span>
+        </div>
       </div>
     </li>
   </template>
@@ -58,9 +61,9 @@
         <span class="name-error popup__input-error"></span>
       </label>
       <label class="popup__label">
-        <input class="popup__input" type="text" name="job" placeholder="О себе" value="" required minlength="2"
+        <input class="popup__input" type="text" name="about" placeholder="О себе" value="" required minlength="2"
           maxlength="200">
-        <span class="job-error popup__input-error"></span>
+        <span class="about-error popup__input-error"></span>
       </label>
       <button class="popup__btn popup__submit" type="submit">Сохранить</button>
     </form>
@@ -80,6 +83,14 @@
         <span class="link-error popup__input-error"></span>
       </label>
       <button class="popup__btn popup__submit" type="submit">Сохранить</button>
+    </form>
+  </aside>
+
+  <aside class="popup" id="popup-confirmation">
+    <form class="popup__container">
+      <h3 class="popup__title">Вы уверены?</h3>
+      <button class="popup__close" aria-label="Закрыть" type="button"></button>
+      <button class="popup__btn" type="submit">Да</button>
     </form>
   </aside>
 
