feat: before revue №1

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <script type="module" src="./pages/index.js"></script>
-  <link rel="stylesheet" href="./pages/index.css">
+  <!-- <script type="module" src="./pages/index.js"></script>
+  <link rel="stylesheet" href="./pages/index.css"> -->
 </head>
 
 <body>
@@ -16,15 +16,19 @@
     </header>
     <main class="page__content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография исследователь">
+        <div class="profile__avatar-container">
+          <img class="profile__avatar" src="" alt="Картинка профиля">
+          <button class="profile__edit-avatar-button" aria-label="Открыть редактирование картинки профиля"
+            type="button"></button>
+        </div>
         <div class="profile__info">
           <div class="profile__title-container">
             <h1 class="profile__title"></h1>
-            <button class="profile__edit-batton" aria-label="Открыть редактирование профиля" type="button"></button>
+            <button class="profile__edit-button" aria-label="Открыть редактирование профиля" type="button"></button>
           </div>
           <p class="profile__subtitle"></p>
         </div>
-        <button class="profile__add-batton" aria-label="Открыть добавление изображений" type="button"></button>
+        <button class="profile__add-button" aria-label="Открыть добавление изображений" type="button"></button>
       </section>
       <section class="elements">
         <ul class="elements__container"></ul>
@@ -65,7 +69,7 @@
           maxlength="200">
         <span class="about-error popup__input-error"></span>
       </label>
-      <button class="popup__btn popup__submit" type="submit">Сохранить</button>
+      <button class="popup__btn popup__submit" type="submit"><span class="popup__btn-text">Сохранить</span></button>
     </form>
   </aside>
 
@@ -82,7 +86,19 @@
         <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
         <span class="link-error popup__input-error"></span>
       </label>
-      <button class="popup__btn popup__submit" type="submit">Сохранить</button>
+      <button class="popup__btn popup__submit" type="submit"><span class="popup__btn-text">Сохранить</span></button>
+    </form>
+  </aside>
+
+  <aside class="popup" id="popup-edit-avatar">
+    <form class="popup__container" name="form-popup" novalidate>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <button class="popup__close" aria-label="Закрыть" type="button"></button>
+      <label class="popup__label">
+        <input class="popup__input" type="url" name="avatar" placeholder="Ссылка на картинку" required>
+        <span class="avatar-error popup__input-error"></span>
+      </label>
+      <button class="popup__btn popup__submit" type="submit"><span class="popup__btn-text">Сохранить</span></button>
     </form>
   </aside>
 
