feat: before revue №1

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <main class="page__content">
       <section class="profile">
         <div class="profile__avatar-container">
-          <img class="profile__avatar" src="" alt="Картинка профиля">
+          <img class="profile__avatar" src="#" alt="Картинка профиля">
           <button class="profile__edit-avatar-button" aria-label="Открыть редактирование картинки профиля"
             type="button"></button>
         </div>
