refactor: image logo made background after 2 revue

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <!-- <script type="module" src="./pages/index.js"></script>
-  <link rel="stylesheet" href="./pages/index.css"> -->
 </head>
 
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Лого Mesto">
+      <div class="header__logo"></div>
     </header>
     <main class="page__content">
       <section class="profile">
